# gitlab-client

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check-rs.yml
examples/basic_hyper/: Cargo.toml  README.md
examples/basic_hyper/src/: main.rs
examples/basic_reqwest/: Cargo.toml  README.md
examples/basic_reqwest/src/: main.rs
src/: context.rs  http.rs  lib.rs  url_util.rs
src/client/: http.rs  mod.rs  reqwest.rs
src/command/: create_release.rs  create_release_link.rs  mod.rs  publish_package_file.rs  update_release.rs
src/common/: group.rs  mod.rs  namespace.rs  package.rs  project.rs  release.rs  topic.rs  tree.rs  user.rs
src/query/: get_package_file.rs  get_project.rs  get_project_list.rs  get_project_list_page.rs  get_project_package_list.rs  get_project_release.rs  get_project_release_list.rs  get_project_release_list_page.rs  get_release.rs  get_tree_record_list.rs  mod.rs
test-resources/get-project-release-list/libxml2/: output.json
