[package]
name = "gitlab_client_example_basic_hyper"
edition = "2021"
publish = false

[dependencies]
bytes = "1.10.1"
gitlab_client = { path = "../..", features = ["http", "reqwest"] }
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.3", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
